Updated index.html to redirect to carrd, updated README to say you can run the game locally, updated guessfromaframe to link to carrd, and updated guessfromaframe sites to not have issues on smaller screens

--- a/guessfromaframe/styles.css
+++ b/guessfromaframe/styles.css
@@ -1,7 +1,10 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    margin: 20px;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; /* Ensure the body takes up the full height */
 }
 
 h1 {
@@ -45,4 +48,23 @@ a:active {
 .score {
     font-size: 0.8em; /* Decrease font size for scores */
     margin-top: 12px; /* Space between the name and the score */
+}
+
+footer {
+	margin-top: auto;
+	width: 100%;
+    text-align: center;
+    padding: 20px 0;
+    background-color: #f1f1f1;
+}
+
+.footer-link {
+    text-decoration: none;
+    color: black;
+    font-size: 1.2em;
+}
+
+.footer-link:hover {
+    color: black;
+    text-decoration: none;
 }
